testing/tests/ui/caller_arguments.stderr
error: expected `3` argument, found `2`
 --> InvalidNumberArguments.txt:3:18
       "(\"a\", \"b\") -}}\n    {%- endmacro -%}\n    {%- call(a,b,c) test() -%}\n        {{- a"...
  --> tests/ui/caller_arguments.rs:5:14
   |
5  |       source = r#"
   |  ______________^
6  | |     {% macro test() %}
7  | |         {{- caller("a", "b") -}}
8  | |     {%- endmacro -%}
...  |
11 | |     {%- endcall -%}
12 | |     "#,
   | |______^

error: expected `1` argument, found `2`
 --> InvalidNumberArguments1.txt:3:18
       "(\"a\", \"b\") -}}\n    {%- endmacro -%}\n    {%- call(a) test() -%}\n        {{- a -}}"...
  --> tests/ui/caller_arguments.rs:21:14
   |
21 |       source = r#"
   |  ______________^
22 | |     {% macro test() %}
23 | |         {{- caller("a", "b") -}}
24 | |     {%- endmacro -%}
...  |
27 | |     {%- endcall -%}
28 | |     "#,
   | |______^

error: expected `)` to close call argument list
 --> <source attribute>:5:15
       "test() -%}\n        {{- a -}}\n    {%- endcall -%}\n    "
  --> tests/ui/caller_arguments.rs:36:14
   |
36 |       source = r#"
   |  ______________^
37 | |     {% macro test() %}
38 | |         {{- caller("a") -}}
39 | |     {%- endmacro -%}
...  |
42 | |     {%- endcall -%}
43 | |     "#,
   | |______^

error: block is not defined for caller
 --> CallerInCaller.txt:6:18
       "(a) -}}\n    {%- endcall -%}\n    "
  --> tests/ui/caller_arguments.rs:51:14
   |
51 |       source = r#"
   |  ______________^
52 | |     {% macro test() %}
53 | |         {{- caller("a") -}}
54 | |     {%- endmacro -%}
...  |
57 | |     {%- endcall -%}
58 | |     "#,
   | |______^

error: block is not defined for caller
 --> CallerInCaller1.txt:10:21
       "(\"b\") }}\n        {% endcall %}\n        {{- a -}}\n    {%- endcall -%}\n    "
  --> tests/ui/caller_arguments.rs:66:14
   |
66 |       source = r#"
   |  ______________^
67 | |     {% macro test2() %}
68 | |         {{ caller("bb") }}
69 | |     {% endmacro %}
...  |
78 | |     {%- endcall -%}
79 | |     "#,
   | |______^

error: block is not defined for caller
 --> JustCaller.txt:1:8
       "()}}"
  --> tests/ui/caller_arguments.rs:87:14
   |
87 |     source = r#"{{caller()}}"#,
   |              ^^^^^^^^^^^^^^^^^

error: failed to parse template source
 --> <source attribute>:3:27
       "= \"b\") }}\n    {%- endmacro -%}\n    {%- call(two, one) test() -%}\n        {{- two"...
   --> tests/ui/caller_arguments.rs:95:14
    |
95  |       source = r#"
    |  ______________^
96  | |     {% macro test() %}
97  | |         {{ caller("a", one = "b") }}
98  | |     {%- endmacro -%}
...   |
101 | |     {%- endcall -%}
102 | |     "#,
    | |______^
